project/logs/20250514_161137.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatrueLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Compile Succeeded,path:Object3D.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3D.PS.hlsl,profile:vs_6_0

Object3D.PS.hlsl:6:1: error: Semantic SV_TARGET is invalid for shader model: vs
PixelShaderOutput main(){
^

